@@ -66,6 +66,10 @@ ECL 0.9i
  - The function SI:PROCESS-COMMAND-ARGS has now a more flexible interface and
    can be used by standalone programs with user supplied rules.
 
+ - Symbols in the core library are now referenced with a self-explanatory
+   macro, as in ECL_SYM("SI::*EXIT-HOOKS*",1379) (Thanks to Douglas R. Miles
+   for the idea).
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
